[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0

[node name="TitleScreenContainer" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_top = 52.0
margin_right = 216.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 60 )

[node name="Title" type="Label" parent="CenterContainer/TitleScreenContainer"]
margin_right = 112.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Pong"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="CenterContainer/TitleScreenContainer"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 112.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/TitleScreenContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 112.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[node name="DifficultyContainer" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
margin_left = 131.0
margin_top = 52.0
margin_right = 189.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 60 )

[node name="EasyButton" type="Button" parent="CenterContainer/DifficultyContainer"]
margin_right = 58.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "Easy"
flat = true

[node name="MediumButton" type="Button" parent="CenterContainer/DifficultyContainer"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Medium"
flat = true

[node name="HardButton" type="Button" parent="CenterContainer/DifficultyContainer"]
margin_top = 40.0
margin_right = 58.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Hard"
flat = true

[node name="BackButton" type="Button" parent="CenterContainer/DifficultyContainer"]
margin_top = 60.0
margin_right = 58.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Back"
flat = true

[connection signal="pressed" from="CenterContainer/TitleScreenContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/TitleScreenContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/BackButton" to="." method="_on_BackButton_pressed"]
